[project]
name = "dobby-backend-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Bastien Moenaert",email = "bastien.moenaert@persgroep.net"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "boto3 (>=1.42.30,<2.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "langchain (>=1.2.6,<2.0.0)",
    "langchain-google-genai",
    "google-generativeai",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
